[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.6"
axum-extra = "0.7.7"
tower-http = { version = "0.4", features = ["fs","cors"] }
tower-cookies = "0.9"
# -- Data
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time", "chrono","rust_decimal" ] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.25"
eyre = "0.6.9"
chrono ={ version = "0.4.31", features = [ "serde" ] }
thiserror = "1.0.50"
dotenv = "0.15.0"
rspc = { version = "0.1.3", features = ["axum"] }
maud = { version = "0.25.0", features = ["axum"] }
askama = { version = "0.11.0"}
jsonwebtoken = "8.3.0"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"
